# Haven

./: .gitignore  README.md  daily_log.md  dev_log.txt  docker-compose.yml  package.json
.github/workflows/: ci.yml
apps/web/: package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
backend/: .env.example  Dockerfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
backend/prisma/: schema.prisma
backend/src/: app.ts  container.ts  server.ts
backend/src/config/: env.ts
backend/src/controllers/: analytics.controller.ts  auth.controller.ts  goal.controller.ts  notification.controller.ts  planner.controller.ts  transaction.controller.ts
backend/test/: amounts.test.ts  interest.test.ts  planner.test.ts
contracts/: Cargo.toml  wallet_integration_evidence.ts
contracts/common/: Cargo.toml
contracts/common/src/: events.rs  lib.rs
contracts/goal-factory/: Cargo.toml
contracts/goal-factory/src/: lib.rs  test.rs
contracts/goal-vault/: Cargo.toml
contracts/goal-vault/src/: lib.rs  test.rs
contracts/mock-strategy/: Cargo.toml
contracts/mock-strategy/src/: lib.rs  test.rs
contracts/treasury/: Cargo.toml
contracts/treasury/src/: lib.rs  test.rs
docs/: api.md  architecture.md  contracts.md  deployment.md  environment-variables.md  roadmap.md  testing.md
frontend/: .dockerignore  Dockerfile  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml
frontend/e2e/: auth-gate.spec.ts  dashboard.spec.ts  landing.spec.ts
scripts/: build-contracts.sh  deploy-contracts.sh
src/: wallet-kit.ts
(+111 files in other folders)
