[workspace]
resolver = "2"
members = [
    "common",
    "mock-strategy",
    "treasury",
    "goal-vault",
    "goal-factory",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[workspace.dependencies]
soroban-sdk = "26.1.0"
haven-common = { path = "common" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

[profile.dev]
overflow-checks = true
